# nicotine-plus

./: .flake8  .gitignore  Makefile  nicotine  nicotine.py  pyproject.toml
.github/workflows/: pythonapp.yml
docker/: Dockerfile.python3
plugins/examplars/: 90-checkport.py
plugins/np_xmplay_windows/: xmplaynp.py
plugins/plugindebugger/: __init__.py
pynicotine/: config.py  logfacility.py  metadata_mutagen.py  pluginsystem.py  pynicotine.py  shares.py  slskmessages.py  slskproto.py  transfers.py  upnp.py  utils.py
pynicotine/gtkgui/: about.py  chatrooms.py  downloads.py  entrydialog.py  fastconfigure.py  frame.py  nowplaying.py  privatechat.py  search.py  settingswindow.py  transferlist.py  uploads.py  userbrowse.py  userinfo.py  userlist.py  utils.py
