[tool.poetry]
name = "nicotine"
version = "1.5.0"
description = "Nicotine+, a client for the SoulSeek filesharing network."
authors = ["Michael Labouebe <gfarmerfr@free.fr>"]
license = "GPLv3"
homepage = "https://www.nicotine-plus.org/"
packages = [
    { include = "pynicotine" },
]

[tool.poetry.scripts]
nicotine = 'nicotine'

[tool.poetry.dependencies]
python = "^3.6"
GeoIP = "1.3.2"
miniupnpc = "1.9"
mutagen = "1.36.2"
pgi = "^0.0.11"
PyGObject = "^3.36.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
flake8 = "^3.7.9"
PyGObject-stubs = "^0.0.2"
isort = { version = "^4.3.21", extras = ["pyproject"] }
docutils-stubs = "^0.0.21"
pytest = "^5.3"

[tool.isort]
force_single_line = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
